# ser-admin-api-python

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: python-publish.yml
examples/: common.py  connector_discovery.py  connectors.py  list_management_requests.py  list_management_unsubscribe.py  relay_config_discovery.py  relay_users.py  reporting_failures.py  reporting_scoped_resources.py  reporting_usage.py  settings.example.json  tag_management.py
src/ser_admin_api/: __init__.py  client.py
src/ser_admin_api/common/: __init__.py  encoding.py  enums.py  models.py  paging.py  ranges.py  requests.py  responses.py
src/ser_admin_api/connectors/: __init__.py  models.py  requests.py  resources.py  responses.py
src/ser_admin_api/relay_users/: __init__.py  models.py  requests.py  resources.py  responses.py
src/ser_admin_api/reporting/: __init__.py  models.py  requests.py  resources.py  responses.py
src/ser_admin_api/reporting/failures/: __init__.py  common.py  delivery_failures.py  ips.py  message_filtering.py  message_trend.py  policy_violations.py  relay_users.py  resources.py  sending_addresses.py  tags.py
src/ser_admin_api/reporting/failures/delivery_failures/: __init__.py  models.py  requests.py  resources.py
src/ser_admin_api/reporting/usage/: __init__.py  models.py  requests.py  resources.py  responses.py
src/ser_admin_api/suppression/: __init__.py  models.py  requests.py  resources.py  responses.py
src/ser_admin_api/tags/: __init__.py  models.py  requests.py  resources.py  responses.py
tools/live_smoke/: README.md  mutation.py  read_only.py
