[build-system]
requires = ["setuptools>=77", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"
fallback_version = "0.0.1"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ser_admin_api = ["py.typed"]

[project]
name = "ser-admin-api"
dynamic = ["version"]
description = "A typed Python client for the Proofpoint Secure Email Relay administrative APIs built with Klarient."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "klarient[requests]>=0.3.0",
    "requests-oauth2client>=1.8",
]

[project.urls]
Documentation = "https://github.com/pfptcommunity/ser-admin-api-python#readme"
Issues = "https://github.com/pfptcommunity/ser-admin-api-python/issues"
Repository = "https://github.com/pfptcommunity/ser-admin-api-python"
